@@ -54,6 +54,8 @@ New features:
     cudaMalloc overhead.
   * Prefetching is now done for all schedulers when it can be done whatever
     the scheduling decision.
+  * Add a watchdog which permits to easily trigger a crash when StarPU gets
+    stuck.
 
 Small features:
   * New functions starpu_data_acquire_cb_sequential_consistency() and
